--- a/index.html
+++ b/index.html
@@ -386,7 +386,9 @@
                 <div class="feature-icon">
                     <i class="fas fa-brain"></i>
                 </div>
-                <h3 class="feature-title">深度學習專精</h3>
+                <h3 class="feature-title">
+                 <a href="https://landp88.my.canva.site/2025-ai" target="_blank" rel="noopener noreferrer">深度學習專精</a>
+                </h3>
                 <p class="feature-description">從基礎概念到高級應用，系統性地學習深度學習的各個面向，包含神經網路、機器學習演算法等核心技術。</p>
             </div>
             
