--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
                     <i class="fas fa-brain"></i>
                 </div>
                 <h3 class="feature-title">
-                 <a href="https://landp88.my.canva.site/2025-ai" target="_blank" rel="noopener noreferrer">深度學習專精</a>
+                 <a href="https://landp88.my.canva.site/2025-ai" target="_blank" rel="noopener noreferrer">2025 AI應用篇</a>
                 </h3>
-                <p class="feature-description">從基礎概念到高級應用，系統性地學習深度學習的各個面向，包含神經網路、機器學習演算法等核心技術。</p>
+                <p class="feature-description">從基礎概念到高級應用，系統性地學習深度學習的各個面向，包含AI圖像設計、影音動畫設計及與學生互動等應用。</p>
             </div>
             
             <div class="feature-card fade-in">
