--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <h3 class="feature-title">
                  <a href="https://landp88.my.canva.site/2025-ai" target="_blank" rel="noopener noreferrer">2025 AI應用篇</a>
                 </h3>
-                <p class="feature-description">從基礎概念到高級應用，包含AI圖像設計、影音動畫設計及與學生互動等應用。</p>
+                <p class="feature-description">從基礎概念開始，包含AI圖像設計、影音動畫設計及與學生互動等應用。</p>
             </div>
             
             <div class="feature-card fade-in">
